# beans-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml  working commands.md
.config/beans/: mod_name.txt  remote_url_base.txt  version_url.txt
.github/workflows/: compile.yml  release.yml
Binaries/: aria2c  butler
src/: appvar.json  appvar.rs  aria2.rs  butler.rs  ctx.rs  depends.rs  download.rs  error.rs  extract.rs  flags.rs  helper.rs  lib.rs  logger.rs  main.rs  userconfig.rs  version.rs  wizard.rs
src/gui/: dialog.rs  dialog_confirm.rs  dialog_generic.rs  dialog_headless.rs  dialog_notinstalled.rs  download_ui.fl  download_ui.rs  icon.rs  install_complete.rs  install_confirm.rs  mod.rs  shared_ui.fl  shared_ui.rs  update_alreadylatest.rs  update_nopatchavailable.rs  wizard.rs  wizard_ui.fl  wizard_ui.rs
src/helper/: linux.rs  mod.rs  windows.rs
src/text/: install_complete_linux.txt  install_complete_windows.txt  msgbox_panic_text.txt  update_complete_linux.txt  update_complete_windows.txt  verify_complete_linux.txt  verify_complete_windows.txt
src/workflows/: clean.rs  install.rs  mod.rs  uninstall.rs  update.rs  verify.rs
