[package]
name = "beans-rs"
version = "1.2.0"
edition = "2021"
authors = [
    "Adastral Group (https://adastral.net)",
    "Kate Ward <kate@dariox.club>"
]
description = "Installer for Open Fortress"
repository = "https://github.com/AdastralGroup/beans-rs"
license = "GPL-3.0"

[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.5"
const_format = "0.2.32"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = "0.30.12"
tar = "0.4.40"
tokio-util = { version= "0.7.11", features = ["io"] }
zstd = "0.13.1"
thiserror = "1.0.61"
include-flate = "0.3.0"
simple-home-dir = "0.3.4"
clap = { version = "4.5.4", features = ["cargo"] }

[target.'cfg(target_os = "windows")'.dependencies]
winconsole = "0.11.1"
winreg = "0.52.0"

[dependencies.tokio]
version = "1.37.0"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.reqwest]
version = "0.12.4"
features = [
    "multipart",
    "stream",
    "json"
]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 1
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = false

